# ai-infra-cost-optimizer

./: README.md
cost-optimizer-prompt/: costOptimizer.md
custom-prometheus-mcp-server/: main.py  mcp_server.py  prometheus_utils.py  pyproject.toml
